plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'kz.bars'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot Web
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// Spring Data JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	// Validation API
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	// Spring Security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	// Spring Boot Actuator
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	// Spring Doc
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
	// Cache
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	// Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	// Jackson
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'
	// Logback
	implementation 'org.springframework.boot:spring-boot-starter-logging'
	testImplementation 'org.projectlombok:lombok:1.18.26'
	// AOP
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	// Lombok
	annotationProcessor 'org.projectlombok:lombok'
	compileOnly 'org.projectlombok:lombok'
	// PostgreSQL Driver
	runtimeOnly 'org.postgresql:postgresql'
	// JWT Implementation
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	// JSON processing
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// Test dependencies
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.mockito:mockito-core'
	testImplementation 'com.h2database:h2'
	testAnnotationProcessor 'org.projectlombok:lombok'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
